@@ -2755,6 +2755,15 @@ src/plugins/twitter/packaging/install/plugin-twitter -text
 src/plugins/twitter/packaging/links/plugin-twitter -text
 src/plugins/twitter/www/checks.php -text
 src/plugins/twitter/www/index.php -text
+src/plugins/webanalytics/action/addLink.php -text
+src/plugins/webanalytics/action/deleteLink.php -text
+src/plugins/webanalytics/action/updateLinkStatus.php -text
+src/plugins/webanalytics/common/webanalytics-init.php -text
+src/plugins/webanalytics/common/webanalyticsPlugin.class.php -text
+src/plugins/webanalytics/db/webanalytics-init.sql -text
+src/plugins/webanalytics/etc/webanalytics.ini -text
+src/plugins/webanalytics/view/admin/viewGlobalConfiguration.php -text
+src/plugins/webanalytics/www/index.php -text
 src/plugins/wiki/README -text
 src/plugins/wiki/common/WikiGroupSearchEngine.class.php -text
 src/plugins/wiki/common/WikiHtmlSearchRenderer.class.php -text
