@@ -1,0 +1,8 @@
+[webanalytics]
+
+; current webanalytics status is valid
+; plugin_status is a string.
+; valid means : production ready.
+; Any other strings means it's under work or broken and plugin 
+; is available in installation_environment = development only.
+plugin_status = valid
