@@ -7,6 +7,7 @@ FusionForge-5.3:
 * scmgit: basic activity support (TrivialDev).
 * scmhg: merge patch from Denise Patzker: add http support, online browse, stats (TrivialDev)
 * Docman: Files moves to filesystem using the Storage generic class (TrivialDev)
+* webanalytics: new plugin to add support for piwik or google analytics tool (TrivialDev)
 
 FusionForge-5.2:
 * Docman: inject zip as a tree (Capgemini)
